# leslie-backend

./: LICENSE  README.md
.github/workflows/: dev-ci.yaml
services/dummy-service/: Dockerfile  pyproject.toml
services/dummy-service-endpoint/: Dockerfile  pyproject.toml
services/dummy-service-endpoint/dummy-service-endpoint/: main.py
services/dummy-service-grpc/: Dockerfile  pyproject.toml
services/dummy-service-grpc/dummy-service-grpc/: dummy.proto  dummy_pb2.py  dummy_pb2_grpc.py  main.py
services/dummy-service/tests/: test_dummy.py
services/dummy_service/: Dockerfile  pyproject.toml
services/grpc-tutorial/: Dockerfile  pyproject.toml
services/grpc-tutorial/grpc-tutorial/: article_pb2.py  article_pb2_grpc.py
services/grpc-tutorial/grpc-tutorial/protos/: article.proto
services/grpc-tutorial/grpc_tutorial/: article_pb2_grpc.py  main.py
