[tool.poetry]
name = "dummy-service"
version = "0.1.0"
description = ""
authors = ["leslie-zi-pan <zifeng1996@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
