[tool.poetry]
name = "grpc-tutorial"
version = "0.1.0"
description = ""
authors = ["leslie-zi-pan <zifeng1996@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpcio-tools = "^1.68.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
